Trying to find particularities

--- a/notebook/product_classifier.ipynb
+++ b/notebook/product_classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+HwIs4F9JETc6vloYRIAw",
+      "authorship_tag": "ABX9TyOMaUQNKje4j6wuCqgHu7yT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4128,6 +4128,190 @@
       ],
       "metadata": {
         "id": "74CriCTRz9T0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I was really close to start removing columns from my dataset without understanding the fact that i will need more data even though my dataset have 35000 rows so let`s be efficient and remove all NaN values because if i want to creat new data i need a set that don`t have those values."
+      ],
+      "metadata": {
+        "id": "q54-J-eC0yCp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = df.dropna().reset_index()\n",
+        "df.isna().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 397
+        },
+        "id": "_B_F5kHg1hbT",
+        "outputId": "68c4370a-457a-4da5-ce2b-10a750531bbe"
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "index              0\n",
+              "Product ID         0\n",
+              "Product Title      0\n",
+              "Merchant ID        0\n",
+              "Category Label     0\n",
+              "Product Code       0\n",
+              "Number of Views    0\n",
+              "Merchant Rating    0\n",
+              " Listing Date      0\n",
+              "title dimension    0\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>index</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Product ID</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Product Title</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Merchant ID</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Category Label</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Product Code</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Number of Views</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Merchant Rating</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Listing Date</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>title dimension</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now that i`m sure that i don``t have NaN values i will try to see if i can extract something from the product title."
+      ],
+      "metadata": {
+        "id": "oi7IUWMu3Iz5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['title dimension_words']=df['Product Title'].apply(lambda x: len(x.split()))\n",
+        "df['title dimension_letters']=df['Product Title'].apply(lambda x: len(x))\n",
+        "\n",
+        "print(df.filter(items=['Product Title','title dimension_letters','title dimension_words']))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kt_olTnX3YNr",
+        "outputId": "021917c9-6b3b-4960-f689-c854138ea860"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                           Product Title  \\\n",
+            "0                        apple iphone 8 plus 64gb silver   \n",
+            "1                    apple iphone 8 plus 64 gb spacegrau   \n",
+            "2      apple mq8n2b/a iphone 8 plus 64gb 5.5 12mp sim...   \n",
+            "3                    apple iphone 8 plus 64gb space grey   \n",
+            "4      apple iphone 8 plus gold 5.5 64gb 4g unlocked ...   \n",
+            "...                                                  ...   \n",
+            "34755  smeg fab28 60cm retro style right hand hinge f...   \n",
+            "34756  smeg fab28 60cm retro style left hand hinge fr...   \n",
+            "34757  smeg fab28 60cm retro style left hand hinge fr...   \n",
+            "34758     candy 60cm built under larder fridge cru160nek   \n",
+            "34759           neff k4316x7gb built under larder fridge   \n",
+            "\n",
+            "       title dimension_letters  title dimension_words  \n",
+            "0                            6                     31  \n",
+            "1                            7                     35  \n",
+            "2                           13                     70  \n",
+            "3                            7                     35  \n",
+            "4                           11                     54  \n",
+            "...                        ...                    ...  \n",
+            "34755                       12                     69  \n",
+            "34756                       12                     66  \n",
+            "34757                       12                     67  \n",
+            "34758                        7                     46  \n",
+            "34759                        6                     40  \n",
+            "\n",
+            "[34760 rows x 3 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ok before i was trying to foud something in my data that will apply for everything that i have here but i will change the strategy so now i will try to find some particularities for each category."
+      ],
+      "metadata": {
+        "id": "FVXDhevI8HXC"
       }
     }
   ]
